logs/sslsnoop.log
Listing '.'...
Listing './bin'...
Compiling './bin/gdb.py'...
Compiling './bin/strace.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/haystack'...
Compiling './lib/python3.5/site-packages/haystack/abouchet.py'...
***   File "./lib/python3.5/site-packages/haystack/abouchet.py", line 424
    except KeyboardInterrupt,e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haystack/gui'...
Compiling './lib/python3.5/site-packages/haystack/gui/gui.py'...
***   File "./lib/python3.5/site-packages/haystack/gui/gui.py", line 154
    print type(self.mapping)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haystack/gui/widgets.py'...
***   File "./lib/python3.5/site-packages/haystack/gui/widgets.py", line 115
    print 'onselect', self
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/haystack/memory_dumper.py'...
***   File "./lib/python3.5/site-packages/haystack/memory_dumper.py", line 48
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haystack/memory_mapping.py'...
***   File "./lib/python3.5/site-packages/haystack/memory_mapping.py", line 460
    except ProcError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haystack/model.py'...
***   File "./lib/python3.5/site-packages/haystack/model.py", line 173
    print l
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/haystack/utils.py'...
***   File "./lib/python3.5/site-packages/haystack/utils.py", line 187
    except struct.error,e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haystack-0.11.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/ptrace'...
Listing './lib/python3.5/site-packages/ptrace/binding'...
Listing './lib/python3.5/site-packages/ptrace/debugger'...
Listing './lib/python3.5/site-packages/ptrace/syscall'...
Listing './lib/python3.5/site-packages/python_ptrace-0.9.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sslsnoop'...
Compiling './lib/python3.5/site-packages/sslsnoop/cleaner.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/cleaner.py", line 121
    print p[0]
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sslsnoop/ctypes_nss.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/ctypes_nss.py", line 39
    print 'STRING is not model.CString. Please correct ctypes_nss_geenrated with :'
                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sslsnoop/ctypes_nss_generated.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/ctypes_nss_generated.py", line 224
    CKT_NSS_UNTRUSTED = 3461563219L # Variable c_uint '-833404077u'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/ctypes_openssh.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/ctypes_openssh.py", line 484
    print 'Cipher:',ctypes.sizeof(Cipher)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/ctypes_openssl.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/ctypes_openssl.py", line 396
    print '%s:'%name,ctypes.sizeof(klass)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/ctypes_openssl_generated.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/ctypes_openssl_generated.py", line 802
    DES_KEY_SZ = 8L # Variable c_uint '8u'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/ctypes_putty.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/ctypes_putty.py", line 375
    print '%s:'%name,ctypes.sizeof(klass)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/engine.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/engine.py", line 71
    print self, repr(model.array2bytes(dest))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/generate.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/generate.py", line 52
    print 'makexml', build
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sslsnoop/lrucache.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/lrucache.py", line 114
    raise ValueError, size
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/network.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/network.py", line 116
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/openssh.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/openssh.py", line 353
    except Queue.Empty,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/openssl.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/openssl.py", line 141
    except ImportError,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/openvpn.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/openvpn.py", line 61
    print 'Cipher : %s-%d'%(ctypes_openssl.getCipherName(ctx.cipher.nid), 8*ctx.cipher.key_len)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/output.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/output.py", line 89
    except SSHException,e:  # only size errror... no sense. should be only one exception.
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/paramiko_packet.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/paramiko_packet.py", line 97
    self.__sequence_number_out = 0L
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/preprocess.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/preprocess.py", line 62
    print ' '.join(cmd_line)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/stream.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/stream.py", line 375
    except Queue.Empty,e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/test-scapy.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/test-scapy.py", line 12
    print len(p), p['TCP'].seq, p.summary()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sslsnoop/test.py'...
***   File "./lib/python3.5/site-packages/sslsnoop/test.py", line 23
    print "0x%lx"%data[i],
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sslsnoop-0.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
